2002-09-17  Nick Drochak  <ndrochak@gol.com>

	* TraceTest.cs: Remove extraneous Console.WriteLine().

2002-06-16  Jonathan Pryor  <jonpryor@vt.edu>
	* TraceTest.cs: Added additional test cases.

2002-04-07  Jonathan Pryor  <jonpryor@vt.edu>

	* TraceTest.cs: Removed extraneous output; renamed test case so that NUnit
	  would find it.

2002-03-10  Jonathan Pryor  <jonpryor@vt.edu>

	* Initial creation of System.Diagnostics test directory
	* AllTests.cs: file added
	* TraceTest.cs: Test System.Diagnostics.Trace class
