@@ -1,3 +1,7 @@
+2002-09-19  Nick Drochak  <ndrochak@gol.com>
+
+	* TraceTest.cs: Clear list of listeners before each test.
+
 2002-09-17  Nick Drochak  <ndrochak@gol.com>
 
 	* TraceTest.cs: Remove extraneous Console.WriteLine().
